--- a/chatbot/backend/package.json
+++ b/chatbot/backend/package.json
@@ -15,6 +15,7 @@
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.5",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "python-shell": "^5.0.0"
   }
 }
