--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.5",
     "nodemailer": "^6.9.14",
-    "nodemon": "^3.1.4",
     "python-shell": "^5.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
